# vcs-sms/model/dto/get_query_param.go
@@ -1,9 +1,12 @@
 package dto
 
 type QueryParam struct {
-	Filters  string `form:"filters" validate:"string"`
-	SortBy   string `form:"sort" validate:"string"`
-	Order    string `form:"order" validate:"oneof=asc desc"`
-	Page     int    `form:"page" validate:"gte=1"`
-	PageSize int    `form:"page_size" validate:"gte=1"`
+	SortBy   string `form:"sort" validate:"omitempty,oneof=server_name status ipv4 created_time"`
+	Order    string `form:"order" validate:"omitempty,oneof=asc desc"`
+	Page     int    `form:"page" validate:"omitempty,gte=1"`
+	PageSize int    `form:"page_size" validate:"omitempty,gte=1"`
+
+	Name   string `form:"name"`
+	Status string `form:"status" validate:"omitempty,oneof=on off"`
+	IPv4   string `form:"ipv4"`
 }
